--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,9 @@ python-dotenv==0.8.2
 python-editor==1.0.3
 python3-openid==3.1.0
 pytz==2018.3
+redis==2.10.6
 requests==2.18.4
+rq==0.10.0
 six==1.11.0
 SQLAlchemy==1.2.5
 sqlalchemy-migrate==0.11.0
