--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ elasticsearch==6.2.0
 Flask==0.12.2
 Flask-Babel==0.11.2
 Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==3.2.3
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
@@ -22,12 +23,14 @@ Flask-WTF==0.14.2
 flipflop==1.0
 guess-language==0.2
 guess-language-spirit==0.5.3
+httpie==0.9.9
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
 pbr==3.1.1
+Pygments==2.2.0
 PyJWT==1.6.1
 python-dateutil==2.7.0
 python-dotenv==0.8.2
