--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,55 @@
-alembic==0.9.8
-Babel==2.5.3
+-i https://pypi.org/simple
+--extra-index-url https://pypi.tuna.tsinghua.edu.cn/simple
+alembic==1.0.10
+babel==2.6.0
 blinker==1.4
-certifi==2018.1.18
+certifi==2019.3.9
 chardet==3.0.4
-click==6.7
-coverage==4.5.1
-decorator==4.2.1
-defusedxml==0.5.0
-dominate==2.3.1
-elasticsearch==6.2.0
-Flask==0.12.2
-Flask-Babel==0.11.2
-Flask-Bootstrap==3.3.7.1
-Flask-HTTPAuth==3.2.3
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.1.1
-Flask-Moment==0.6.0
-Flask-SQLAlchemy==2.3.2
-Flask-WhooshAlchemy==0.56
-Flask-WTF==0.14.2
+click==7.0
+colorama==0.4.1 ; sys_platform == 'win32'
+coverage==4.5.3
+decorator==4.4.0
+defusedxml==0.6.0
+dominate==2.3.5
+elasticsearch==7.0.1
+flask-babel==0.12.2
+flask-bootstrap==3.3.7.1
+flask-httpauth==3.2.4
+flask-login==0.4.1
+flask-mail==0.9.1
+flask-migrate==2.4.0
+flask-moment==0.7.0
+flask-sqlalchemy==2.4.0
+flask-whooshalchemy==0.56
+flask-wtf==0.14.2
+flask==1.0.2
 flipflop==1.0
-guess-language==0.2
 guess-language-spirit==0.5.3
-httpie==0.9.9
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.10
-Mako==1.0.7
-MarkupSafe==1.0
-pbr==3.1.1
-Pygments==2.2.0
-PyJWT==1.6.1
-python-dateutil==2.7.0
-python-dotenv==0.8.2
-python-editor==1.0.3
+guess-language==0.2
+httpie==1.0.2
+idna==2.8
+itsdangerous==1.1.0
+jinja2==2.10.1
+mako==1.0.10
+markupsafe==1.1.1
+pbr==5.2.0
+pygments==2.4.0
+pyjwt==1.7.1
+python-dateutil==2.8.0
+python-dotenv==0.10.2
+python-editor==1.0.4
 python3-openid==3.1.0
-pytz==2018.3
-redis==2.10.6
-requests==2.18.4
-rq==0.10.0
-six==1.11.0
-SQLAlchemy==1.2.5
-sqlalchemy-migrate==0.11.0
-sqlparse==0.2.4
-Tempita==0.5.2
-urllib3==1.22
+pytz==2019.1
+redis==3.2.1
+requests==2.21.0
+rq==1.0
+six==1.12.0
+sqlalchemy-migrate==0.12.0
+sqlalchemy==1.3.3
+sqlparse==0.3.0
+tempita==0.5.2
+urllib3==1.24.3
 visitor==0.1.3
-Werkzeug==0.14.1
-Whoosh==2.7.4
-WTForms==2.1
+werkzeug==0.15.4
+whoosh==2.7.4
+wtforms==2.2.1
